--- a/modulebase/src/main/res/values/strings.xml
+++ b/modulebase/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" translatable="false" tools:ignore="MissingTranslation">
     <string name="app_name">modulebase</string>
 </resources>
