--- a/moduleuser/src/main/res/values/strings.xml
+++ b/moduleuser/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
-<resources>
-    <string name="app_name">moduleuser</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name" tools:ignore="MissingTranslation">moduleuser</string>
 </resources>
