--- a/moduleuser/src/main/res/values/strings.xml
+++ b/moduleuser/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name" tools:ignore="MissingTranslation">moduleuser</string>
+<resources xmlns:tools="http://schemas.android.com/tools"  tools:ignore="MissingTranslation">
+    <string name="app_name">moduleuser</string>
+
+
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
